After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772586 - Quash some warnings
Quash some warnings
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-07 17:56 UTC by Ernestas Kulik
Modified: 2016-10-07 18:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Quash some warnings (2.43 KB, patch)
2016-10-07 17:56 UTC, Ernestas Kulik
committed Details | Review

Description Ernestas Kulik 2016-10-07 17:56:08 UTC
lineup-parameters: remove unused variable (fixed upstream)
bookmark: cast away const modifier in nautilus_bookmark_compare_with()
when using GLib macros
file-operations: used correct enum in a function call
Comment 1 Ernestas Kulik 2016-10-07 17:56:13 UTC
Created attachment 337191 [details] [review]
Quash some warnings
Comment 2 Carlos Soriano 2016-10-07 17:57:07 UTC
Review of attachment 337191 [details] [review]:

quack

(never heard quash before)