general: quash some warnings

lineup-parameters: remove unused variable (fixed upstream)
bookmark: cast away const modifier in nautilus_bookmark_compare_with()
when using GLib macros
file-operations: used correct enum in a function call

https://bugzilla.gnome.org/show_bug.cgi?id=772586